Revised output files for 207

--- a/examples/output/syllabus_GEOL207_DinoWorld_01-20-24.html
+++ b/examples/output/syllabus_GEOL207_DinoWorld_01-20-24.html
@@ -361,7 +361,7 @@ The late work policy should define what constitutes late work (e.g., submitting 
 <tr class="even">
 <td></td>
 <td></td>
-<td>Lab 6: Excavation Stage II, Caudal Region</td>
+<td>Lab 6: Excavation Stage 2, Caudal Region</td>
 </tr>
 <tr class="odd">
 <td></td>
@@ -396,7 +396,7 @@ The late work policy should define what constitutes late work (e.g., submitting 
 <tr class="odd">
 <td></td>
 <td></td>
-<td>Lab 7: Excavation Stage 2, Spine Vertebrae</td>
+<td>Lab 7: Excavation Stage 3, Spine Vertebrae</td>
 </tr>
 <tr class="even">
 <td></td>
@@ -431,7 +431,7 @@ The late work policy should define what constitutes late work (e.g., submitting 
 <tr class="even">
 <td></td>
 <td></td>
-<td>Lab 8: Excavation Stage 3, Skull and Forelimb</td>
+<td>Lab 8: Excavation Stage 4, Skull and Forelimb</td>
 </tr>
 <tr class="odd">
 <td></td>
